# Kabegami

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dependencies.json  pkg-layout.md  update_dependencies.py
Interface/: com.github.RozeFound.Kabegami.yml  meson.build
Interface/data/: com.github.RozeFound.Kabegami.appdata.xml.in  com.github.RozeFound.Kabegami.desktop.in.in  com.github.RozeFound.Kabegami.gschema.xml  meson.build
Interface/data/po/: POTFILES
Interface/kabegami/: config.py  kabegami.py  main.py  meson.build
Interface/kabegami/ui/: about.blp  kabegami.gresource.xml  meson.build  style.css  theme_switcher.blp  window.blp
Interface/kabegami/views/: meson.build  not_implemented.py
Interface/kabegami/widgets/: meson.build  theme_switcher.py
Interface/kabegami/windows/: main_window.py  meson.build
Interface/po/: POTFILES  meson.build
cmake/: dependencies.cmake  shaders.cmake  tools.cmake
docs/: pkg-layout.md
headers/filesystem/: filesystem.hpp
headers/vulkan/: context.hpp  device.hpp  instance.hpp
resources/shaders/: basic.frag  basic.vert  common.glsl
resources/shaders/effects/: waterripple_opengl.frag  waterripple_opengl.vert
source/: app.cpp  app.hpp  context.cpp  logging.hpp  main.cpp  scene.cpp  scene.hpp  structures.hpp  texture.cpp  texture.hpp  utils.hpp  vectors.hpp  window.cpp  window.hpp
source/assets/: filesystem.cpp  filesystem.hpp  mappings.hpp  package.cpp  package.hpp  shader.cpp  shader.hpp  structures.hpp  texture.cpp  texture.hpp
source/filesystem/: binary_stream.hpp  filesystem.cpp  filesystem.hpp  location.hpp  mount.hpp  package.cpp  package.hpp  vfs.hpp
source/objects/: image.hpp  light.hpp  material.hpp  model.hpp  object.hpp  particle.hpp  scene.hpp  sound.hpp
source/parsers/: shader.cpp  shader.hpp  texture.cpp  texture.hpp
source/vulkan/: context.cpp  device.cpp  engine.cpp  engine.hpp  gpu.cpp  gpu.hpp  instance.cpp  logging.cpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  utils.hpp
source/vulkan/core/: context.cpp  context.hpp  descriptor_set.cpp  descriptor_set.hpp  device.cpp  device.hpp  gpu.cpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  shaders.hpp  surface.hpp  swapchain.cpp  swapchain.hpp
source/vulkan/core/helpers/: device.cpp  device.hpp  gpu.cpp  gpu.hpp  instance.cpp  instance.hpp  surface.hpp
source/vulkan/shaders/: compiler.cpp  compiler.hpp  includer.cpp  includer.hpp  module.hpp  reflection.cpp  reflection.hpp  shader.cpp  shader.hpp
source/vulkan/utility/: fps_limiter.cpp  fps_limiter.hpp  image.cpp  image.hpp  memory.hpp  misc.cpp  misc.hpp  primitives.hpp  transient.cpp  transient.hpp
